# cortex-xsiam-sdk-mcp-tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.in
.github/: dependabot.yml
.github/workflows/: build-index.yml  ci.yml  codeql.yml
docs/: CREDENTIALS.md  DEMO.md  MCP_CLIENTS.md  SAMPLE_PROMPTS.md  XQL_REFERENCE.md
mcp_demisto_sdk/: __init__.py  __main__.py  security.py  server.py
mcp_demisto_sdk/rag/: __init__.py  indexer.py  search.py  store.py  tools.py
tests/: test_security.py  test_server.py
tools/: download_content.json  find_dependencies.json  format_content.json  generate_docs.json  generate_outputs.json  generate_test_playbook.json  generate_unit_tests.json  init_integration.json  init_pack.json  init_script.json  lint_content.json  openapi_codegen.json  postman_codegen.json  run_command.json  run_playbook.json  update_release_notes.json  upload_content.json  validate_content.json  zip_packs.json
