[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-demisto-sdk"
version = "0.1.0-alpha"
description = "MCP server for demisto-sdk commands"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ciaran Finnegan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "demisto-sdk>=1.38.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/ciaran-finnegan/cortex-xsiam-sdk-mcp-tools"
Repository = "https://github.com/ciaran-finnegan/cortex-xsiam-sdk-mcp-tools"
Issues = "https://github.com/ciaran-finnegan/cortex-xsiam-sdk-mcp-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_demisto_sdk*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

